--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "faker": "^5.4.0",
     "jquery": "^3.6.0",
     "mocha": "^8.3.2",
+    "mongo-mock": "^4.0.0",
     "mongoose": "^5.11.18",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
+    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-react": "^7.12.13",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
