--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,12 @@ languages: node js
 node_js:
   - node
 
+services:
+  - mongodb
+
+before_script:
+  - sleep 15
+  - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
+
 script:
   - npm test
