Set up & config Cassandra

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "cassandra-driver": "^4.6.2",
     "core-js": "^3.9.1",
     "express": "^4.17.1",
     "faker": "^5.4.0",
+    "helenus": "^0.6.10",
     "jquery": "^3.6.0",
     "mocha": "^8.3.2",
     "mongo-mock": "^4.0.0",
