--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mocha": "^8.3.2",
     "mongo-mock": "^4.0.0",
     "mongoose": "^5.11.18",
+    "pg-promise": "^10.10.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "regenerator-runtime": "^0.13.7"
