Updated benchmark to run in parallel

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test": "node_modules/jest/bin/jest.js",
     "test-debug": "jest --detectOpenHandles",
     "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls",
-    "benchmark-cass": "cd ./db/cassandra/benchmark && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js",
-    "benchmark-post": "cd ./db/postgres/benchmark && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js && node benchmark.js"
+    "benchmark-cass": "cd ./db/cassandra/benchmark && (node benchmark.js & node benchmark.js & node benchmark.js & node benchmark.js)",
+    "benchmark-post": "cd ./db/postgres/benchmark && (node benchmark.js & node benchmark.js & node benchmark.js & node benchmark.js)"
 
   },
   "dependencies": {
