--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls",
     "benchmark-cass": "cd ./db/cassandra/benchmark && (node benchmark.js & node benchmark.js & node benchmark.js & node benchmark.js)",
     "benchmark-post": "cd ./db/postgres/benchmark && (node benchmark.js & node benchmark.js & node benchmark.js & node benchmark.js)"
-
   },
   "dependencies": {
     "@babel/preset-env": "^7.13.10",
@@ -32,6 +31,7 @@
     "mocha": "^8.3.2",
     "mongo-mock": "^4.0.0",
     "mongoose": "^5.11.18",
+    "newrelic": "^7.4.0",
     "pg-promise": "^10.10.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
