--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "react-dev": "webpack --watch",
     "start": "node ./server/index.js",
-    "start-dev": "node ./server/index.js",
+    "dev": "nodemon ./server/index.js",
     "build": "webpack",
     "test": "node_modules/jest/bin/jest.js",
     "test-debug": "jest --detectOpenHandles",
@@ -73,6 +73,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-test-render": "^1.1.2",
+    "redis": "^3.1.2",
     "style-loader": "^2.0.0",
     "supertest": "^6.1.3",
     "webpack": "^5.24.2",
